<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/backgroundColor"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:text="@string/hrana"
        android:textColor="#000000"
        android:textSize="30sp"
        android:visibility="gone"


        app:layout_constraintBottom_toTopOf="@+id/sl"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:id="@+id/sl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadeScrollbars="true"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/ll"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/llHrana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:backgroundTint="#80FFEAAD"
                android:backgroundTintMode="src_over"
                android:background="@drawable/food"
                >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20sp"
                    android:text="@string/hrana"
                    android:textSize="30sp" />



            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/drink"
                android:backgroundTint="#80FFEAAD"
                android:backgroundTintMode="src_over"
                >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20sp"
                    android:text="@string/pice"
                    android:textSize="30sp"

                    />


            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/komentar"
                android:textSize="30sp"

                />

            <EditText
                android:id="@+id/editText1"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"

                />

            <TextView
                android:id="@+id/textView9"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isporuka"
                android:textSize="30sp"

                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintStart_toStartOf="parent"
                >

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isporuka1"
                    android:textSize="20sp"
                    android:checked="true"
                    />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isporuka2"
                    android:textSize="20sp"
                    />
            </RadioGroup>



        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button2"
        style="@style/buttonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sl"
         />

</androidx.constraintlayout.widget.ConstraintLayout>